# monitor_processes

./: .gitignore  README.md  build.sh  dev.sh  install.sh  package-lock.json  package.json  set_device_ip.sh
monitor-processes/: Cargo.toml
monitor-processes-dashboard/: index.html  package-lock.json  package.json  vite.config.ts
monitor-processes-dashboard/public/: site.webmanifest
monitor-processes-dashboard/src/: App.tsx  index.css  main.tsx
monitor-processes-dashboard/src/components/: Container.tsx  Header.tsx  ProcessesTable.tsx  StatsGraph.tsx
monitor-processes-dashboard/src/hooks/: useCircularBuffer.ts  useSystemQuery.ts
monitor-processes-dashboard/src/services/: getPercentage.ts  getStorageUnits.ts
monitor-processes/src/: buffer.rs  main.rs  process_info.rs
