[package]
name = "monitor-processes"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
futures-util = "0.3.31"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
sysinfo = "0.32.1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
warp = "0.3.7"
whoami = "1.5.2"

[[bin]]
name = "monitor-processes"
version = "0.1.0"
edition = "2021"
